# django-stock-tracker

./: pyproject.toml
django_stock_tracker/: db.sqlite3  manage.py
django_stock_tracker/django_stock_tracker/: asgi.py  settings.py  urls.py  wsgi.py
django_stock_tracker/mainapp/: urls.py  views.py
django_stock_tracker/mainapp/templates/mainapp/: basic.html  stockpicker.html  stocktracker.html
