[tool.poetry]
name = "django-stock-tracker"
version = "0.1.0"
description = ""
authors = ["lorenzo rognini <l.rognini@white3.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
yahoo-fin = "^0.8.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
